syntax = "proto3";

package forwarder;

// L√çNEA CLAVE
option go_package = "./proto;forwarder";

service Forwarder {
  rpc SendData (DataRequest) returns (DataResponse);
}

message DataRequest {
  string device_id = 1;
  string payload = 2;
}

message DataResponse {
  bool success = 1;
}
